# social_app_django

./: .gitignore  README.md  pyproject.toml
app/: manage.py
app/comments/: models.py
app/core/: urls.py  views.py
app/core/static/css/: dashboard_layout.css
app/core/templates/: home.html
app/core/templates/common/: icon_arrow_left.html  icon_cloud_down.html  icon_pencil.html  icon_user_block.html
app/core/templates/layout/: base.html  dashboard_layout.html  simple_layout.html
app/core/templates/layout/partials/: navbar.html  sidebar.html
app/core/templatetags/: path_tags.py
app/followers/: admin.py  models.py
app/likes/: admin.py  models.py
app/management/: urls.py  views.py
app/management/templates/: base_auth_management.html  login.html  profile.html  register.html
app/posts/: models.py
app/saves/: admin.py  models.py
app/shares/: admin.py  models.py
app/social_app_django/: asgi.py  settings.py  urls.py  wsgi.py
